        (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)
    {+} Default C memory manager for other 32-bit unix targets (https://www.freepascal.org/docs-html/current/rtl/cmem/index.html)
    {+} New rule mvidlookupdone - needed for genre, filecount, ntsc and pal rule
    {#} Relogin of slots didn't bring up all slots as intended
    {#} announce_event for precatcher from spam config never worked
    {#} Backup causes access violation if stats db is disabled but a stats db file exists
    {#} Possibility for deadlock due to irc_message_lock and pending_messages_queue lock
    {#} Fix queue bloat issue with race task being recreated over and over again for a specific site
    {#} Sometimes files that should have been skipped were transfered anyway
    {#} mp3numdisks took the wrong value, e.g. VA-Serious_Beats_92-(541833CD)-4CD-FLAC-2019-WRE
    {#} Fix some dirlist related access violations
    {^} TRegExpr class is faster now and doesn't work with invalid regexes anymore
    {^} Enumerations for some TV function for better clarification
    {^} Idling keeps all slots in a ready state now
    {^} Added a new option (2) for the setting skip_being_uploaded_files to allow downloading 0byte files
    {^} Remove unnecessary global lock when writing to IRC
    {^} Optimized code for splitting long messages before writing to IRC
    {^} Announce reason why getting TV season and/or episode from releasename failed
    {^} Some improvements in racing mechanics and FTP response handling
    {^} Rewritten Ident support (cross-platform)
    {^} Use up to half of a site's slots for dirlist in case of multiple simultaneous races
    {-} Remove auto-set of legacydirlist in case of 'PRET required' FTP response

--=============================( SLFTP v1.5.6 )===================================-
 ** NOTE: FROM NOW ON YOU HAVE TO USE - Delphi 10.3 Rio or newer - ON WINDOWS! **