@@ -61,6 +61,7 @@
         (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)
     {+} Default C memory manager for other 32-bit unix targets (https://www.freepascal.org/docs-html/current/rtl/cmem/index.html)
     {+} New rule mvidlookupdone - needed for genre, filecount, ntsc and pal rule
+    {+} Catchadd command now accepts event type ADDPRE which can be used to fill your pre database using the precatcher
     {#} Relogin of slots didn't bring up all slots as intended
     {#} announce_event for precatcher from spam config never worked
     {#} Backup causes access violation if stats db is disabled but a stats db file exists
